--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -91,8 +91,7 @@
    <button class="dropdown-item" type="button">
    <form class="form-inline">
     <a href="templates.html" style="text-decoration:none;">
-             <img src="./images/Workshop.png" width="30" height="30"
-                        class="img-fluid m-sm-2" alt="">Workshop</a>
+           Workshop</a>
                       </form>
                     </button>
                     <button class="dropdown-item" type="button">
@@ -196,8 +195,7 @@
                   <div class="dropdown-divider"></div>
 <div class="row">
     <form class="form-inline">
-             <img src="./images/Workshop.png" width="30" height="30"
-                        class="img-fluid m-sm-2" alt="">Workshop
+            Workshop
                       </form>
                     </button>
                   </div>
