--- a/startdoing.html
+++ b/startdoing.html
@@ -98,8 +98,7 @@
    <button class="dropdown-item" type="button">
    <form class="form-inline">
     <a href="templates.html" style="text-decoration:none;">
-             <img src="images/Workshop.png" width="30" height="30"
-                        class="img-fluid m-sm-2" alt="">Workshop</a>
+             Workshop</a>
                       </form>
                     </button>
                     <button class="dropdown-item" type="button">
