--- a/templates.html
+++ b/templates.html
@@ -87,8 +87,7 @@ a: visited{
                     </button>
    <button class="dropdown-item" type="button">
    <form class="form-inline">
-             <img src="./images/Workshop.png" width="30" height="30"
-                        class="img-fluid m-sm-2" alt="">Workshop
+             Workshop
                       </form>
                     </button>
                     <button class="dropdown-item" type="button">
@@ -851,33 +850,10 @@ a: visited{
                   </div>
   
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
   </div>
-
-
-
-
 </div>
-
-
-
-
-
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
-  
   </body>
 </html>
